--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
         <jackson.version>2.10.0</jackson.version>
         <rhba.platform.bom.version>7.7.0.redhat-00002</rhba.platform.bom.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <junit.version>4.13</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -54,6 +56,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- KIE Dependencies -->
         <dependency>
             <groupId>org.kie</groupId>
             <artifactId>kie-api</artifactId>
@@ -78,6 +81,29 @@
             <groupId>org.kie</groupId>
             <artifactId>kie-dmn-api</artifactId>
         </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.28</version>
+        </dependency>
+
+
+
+        <!-- Testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
