--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         <kie-maven-plugin.version>7.33.0.Final-redhat-00002</kie-maven-plugin.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>red-hat-ga</id>
+            <url>https://maven.repository.redhat.com/ga</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -99,6 +106,11 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-client</artifactId>
             <version>5.11.0.redhat-630446</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-jms-client</artifactId>
+            <version>0.45.0.redhat-00002</version>
         </dependency>
 
         <!-- Logging -->
