--- a/pom.xml
+++ b/pom.xml
@@ -89,27 +89,33 @@
         </dependency>
 
         <!-- AMQ -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.jms</groupId>
-            <artifactId>jboss-jms-api_2.0_spec</artifactId>
-            <version>2.0.0.Final-redhat-00001</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.jboss.spec.javax.jms</groupId>-->
+        <!--            <artifactId>jboss-jms-api_2.0_spec</artifactId>-->
+        <!--            <version>2.0.0.Final-redhat-00001</version>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
-            <version>2.16.0</version>
+            <version>2.16.0.redhat-00007</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-client</artifactId>
             <version>5.11.0.redhat-630446</version>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.qpid</groupId>-->
+        <!--            <artifactId>qpid-jms-client</artifactId>-->
+        <!--            <version>0.54.0.redhat-00001</version>-->
+        <!--        </dependency>-->
+
         <dependency>
-            <groupId>org.apache.qpid</groupId>
-            <artifactId>qpid-jms-client</artifactId>
-            <version>0.45.0.redhat-00002</version>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>5.7.0</version>
         </dependency>
 
 
